# MejoraRedmi14c

./: .gitignore  .lighthouserc.json  ADB_SCRIPTS.md  ADVANCED_DIAGNOSTICS.md  ADVANCED_EXPORT.md  ALTERNATIVAS.md  ANOMALY_DETECTION.md  ARCHITECTURE.md  ARCHIVE.md  AUTO_MODE.md  BACKUP_ROLLBACK.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTO_SESSION.md  CUsersPabloAppDataLocalTempsindy_pkgs_raw.txt  DASHBOARD.md  DEVICE_PROFILES.md  EXPERT_MODE.md  EXTENSIONS.md  FAILURE_PREDICTION.md  FAQ.md  GEMINI.md  GUARDIAN_MODE.md  HYBRID_AI.md  INFORME.md  INTERNAL_API.md  LICENSE  NON_LINEAR_PREDICTION.md  OPTIMIZER_FLOW.md  PDF_EXPORT.md  PLUGIN_SYSTEM.md  PREDICTION_DASHBOARD.md  PROACTIVE_OPTIMIZATION.md  PROMPT.md  QUICKSTART.md  README.md  REPORTS.md  (+69 more)
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.storybook/: preview.js
Documents/: ADR-001-react-vite-tailwind.md  ADR-002-script-generation-no-execution.md  ADR-003-bloatware-external-json.md  ARQUITECTURA.md  CHANGELOG.md  DOCUMENTACION.md  PLAN_POR_ETAPAS.md  RUNBOOK.md  USER-STORIES.md
app/: package.json
core/: adb_utils.sh  database.sh  device_profile.sh  display.sh
data/: bloatware_db.sh
docs/: baseline_metrics.md  benchmark_20260526.txt
e2e/: accessibility.spec.js  app.spec.js  modules.spec.js  visual.spec.js
electron/: main.js  preload.js
engines/: bloatware.sh  network.sh
installer/: README-WINDOWS.md  README.md  SHA512SUMS.txt  build-log-2026- 0-do_11-34-46.txt  build-windows-autonomo.bat  build-windows-con-log.bat  (+4 more)
(+199 files in other folders)
